src/test/deca/context/valid/new_main.deca
// Description:
//    Test d'un new
//
// Résultats:
//    ok
//
// Historique:
//    créé le 21/01/2017

class A {
    int x;
}
{
    A a = new A();
    new A();
}