src/test/deca/context/invalid/this_main.deca
// Description:
//    Test d'un this dans un main
//
// Résultats:
//    Ligne 15 :
//
// Historique:
//    créé le 21/01/2017

class A {
    int x;
}
{
    A a = new A();
    this.equals(a);
}